--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,13 +2,16 @@ version: '3.8'
 
 services:
   app:
+    image: todolist-app
     build:
       context: .
       dockerfile: Dockerfile
     ports:
       - "8080:80"
+    env_file: .env
     volumes:
       - .:/var/www/html
     environment:
       - APACHE_RUN_USER=www-data
       - APACHE_RUN_GROUP=www-data
+
